decide every url should end of a slash /

--- a/src/main/webapp/html/demo.html
+++ b/src/main/webapp/html/demo.html
@@ -18,7 +18,7 @@
 			weigth : 88.8
 		}; 
 		o = JSON.stringify(o);
-		var cnameUrl = "putjson/" + encodeURIComponent(encodeURIComponent("a48bc.cnc.com'"));
+		var cnameUrl = "putjson/" + "a48bc.cnc.com/";
 		alert(cnameUrl);
 		//alert(JSON.stringify(o));
 		$.ajax({
